css/style.css
:root {
  --overline-color: #e8d482;
}

a {
  text-decoration: none;
}

body {
  width: 100%;
  height: 100%;
  background-color: black;
}

@keyframes fadebg {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 0.4;
  }
}

.bgfade {
  animation-timing-function: ease-in;
  animation-name: fadebg;
  animation-duration: 2.5s;
  animation-fill-mode: forwards;
  opacity: 0;
}

@keyframes fadetext {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.fadetitle {
  animation-timing-function: ease-in;
  animation-name: fadetext;
  animation-duration: 1.5s;
  animation-fill-mode: forwards;
  animation-delay: .5s;
  opacity: 0;
}

.fadelinks {
  animation-timing-function: ease-in;
  animation-name: fadetext;
  animation-duration: 1s;
  animation-fill-mode: forwards;
  animation-delay: 1.5s;
  opacity: 0;
}

#background {
  position: fixed;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  z-index: -100;
  transform: translateX(-50%) translateY(-50%);
}

.bgvid {
  width: 100vw;
  height: 100vw;
}

.bgimg {
  visibility: visible;
}

.wrapper {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: auto;
  width: auto;
  margin: auto;
  line-height: 0.7;
}

.title {
  width: auto;
  height: auto;
  margin: 20px;
  text-align: center;
  transition-timing-function: ease-out;
  text-shadow: 3px 3px 10px black;
  font-family: 'Maven Pro', Arial;
  letter-spacing: -2px;
  font-size: 10vh;
  color: white;
  user-select: none;
}

.title:hover {
  transition-duration: .4s;
  transition-timing-function: ease-out;
  text-shadow: 0px 0px 30px white;
}

.menu {
  display: flex;
  width: auto;
  height: auto;
  margin-left: auto;
  margin-right: auto;
  line-height: 30px;
}

.link {
  display: table-cell;
  width: auto;
  height: auto;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  font-size: 3.5vh;
  color: white;
  text-shadow: 1px 1px 6px black;
  padding: 5px;
}

.hvr-overline-from-center {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  position: relative;
  overflow: hidden;
}

.hvr-overline-from-center:before {
  content: "";
  position: absolute;
  z-index: -1;
  left: 51%;
  right: 51%;
  top: 0px;
  bottom: 20px;
  background: var(--overline-color);
  height: 2px;
  -webkit-transition-property: left, right;
  transition-property: left, right;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.hvr-overline-from-center:hover:before,
.hvr-overline-from-center:focus:before,
.hvr-overline-from-center:active:before {
  left: 0;
  right: 0;
}

.grow {
  transition: all .3s ease-in-out;
}

.grow:hover {
  transform: scale(1.15);
}

.sc-embed {
  /*center this div*/
  padding-top: 20px;
  margin: auto;
  display: block;
  width: 100%;
  height: 100%;
}

